--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
 				{
 					"id": "refactorerl",
 					"title": "RefactorErl",
-					"icon": "media/svg-2.svg"
+					"icon": "media/refactorerl-logo.svg"
 				}
 			]
 		},
