--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
 		"onView:variableOrigin",
 		"onView:referlDashboard",
 		"onCommand:refactorErl.start",
+		"onCommand:refactorErl.query",
 		"onCommand:refactorErl.doRefactor",
 		"onWebviewPanel:refactorErl"
+		
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -36,10 +38,11 @@
 				"category": "RefactorErl"
 			},
 			{
-				"command": "variableOrigin.sayhello",
-				"title": "Sayhello",
+				"command": "refactorErl.query",
+				"title": "Query",
 				"category": "RefactorErl"
 			}
+	
 		],
 		"viewsContainers": {
 			"activitybar": [
@@ -80,10 +83,6 @@
 				"contents": "Try setting to coursor into a varialbe and use the Code Action (small lamps) to execute. \n\n The result will appear here.",
 				"when": "!refactorErl.treeViewActive"
 			}
-
-
-
-			  
 		]
 	},
 	"scripts": {
@@ -106,3 +105,4 @@
 		"ws": "^8.5.0"
 	}
 }
+
