--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
 		"onCommand:refactorErl.query",
 		"onCommand:refactorErl.doRefactor",
 		"onWebviewPanel:refactorErl"
-		
 	],
 	"main": "./out/extension.js",
 	"contributes": {
@@ -42,7 +41,6 @@
 				"title": "Custom Query",
 				"category": "RefactorErl"
 			}
-	
 		],
 		"viewsContainers": {
 			"activitybar": [
@@ -106,7 +104,7 @@
 		"typescript": "^4.5.5"
 	},
 	"dependencies": {
+		"fs": "^0.0.1-security",
 		"ws": "^8.5.0"
 	}
 }
-
