--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
 			"refactorerl": [
 				{
 					"id": "referlDashboard",
-					"name": "RefactorErl dashboard",
-					"icon": "media/dep.svg",
-					"contextualTitle": "RefactorErl"
+					"name": "RefactorErl dashboard"
 				},
 				{
 					"id": "variableOrigin",
@@ -72,7 +70,7 @@
 		"viewsWelcome": [
 			{
 				"view": "referlDashboard",
-				"contents": "RefactorErl: 🟢  Online \n [Check](command:refactorErl.checkWebSocket)",
+				"contents": "RefactorErl: 🟢  Online \n [Check connection](command:refactorErl.checkWebSocket)",
 				"when": "refactorErl.nodeReachable"
 			},
 			{
@@ -104,7 +102,9 @@
 		"typescript": "^4.5.5"
 	},
 	"dependencies": {
+		"@types/uuid": "^8.3.4",
 		"fs": "^0.0.1-security",
+		"uuid": "^8.3.2",
 		"ws": "^8.5.0"
 	}
 }
