--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "editor.insertSpaces": false
+    "editor.insertSpaces": false,
+    "workbench.colorCustomizations": {
+        "statusBar.background" : "#24c0c5",
+    },
 }
