--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
 		"strict": true,
 		"rootDir": "src"
 	},
-	"exclude": ["node_modules", ".vscode-test", "vscode-els-referl/**/"]
+	"exclude": ["node_modules", ".vscode-test", ".vscode-els-referl/**/"]
 }
