--- a/src/depgraphView/tsconfig.json
+++ b/src/depgraphView/tsconfig.json
@@ -3,7 +3,7 @@
 		"module": "commonjs",
 		"target": "es2020",
 		"lib": ["es2020", "dom"],
-		"outDir": "../../media/js",
+		"outDir": "../../out/webview",
 		"sourceMap": true,
 		"strict": true,
 		"rootDir": ".",
