--- a/src/depgraphView/tsconfig.json
+++ b/src/depgraphView/tsconfig.json
@@ -1,11 +1,8 @@
 {
 	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es2020",
-		"lib": ["es2020", "dom"],
-		"outDir": "../../out/webview",
-		"sourceMap": true,
-		"strict": true,
+		"target": "es6",
+		"lib": ["dom"],
+		"outDir": "../../media/webview",
 		"rootDir": ".",
 		"composite": true
 	},
