--- a/src/depgraphView/tsconfig.json
+++ b/src/depgraphView/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"target": "es6",
 		"lib": ["dom"],
-		"outDir": "../../media/webview",
+		"outDir": "../../media/webview/out",
 		"rootDir": ".",
 		"composite": true
 	},
