--- a/package.json
+++ b/package.json
@@ -83,7 +83,7 @@
 		"vscode:prepublish": "npm run compile",
 		"compile": "tsc -b ./",
 		"lint": "eslint . --ext .ts,.tsx",
-		"watch": "tsc -w -p ./"
+		"watch": "tsc -w -b ./"
 	},
 	"devDependencies": {
 		"@types/node": "^12.12.0",
